automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div class="wrapper">
       <div id="front" class="album">
         <div id="title-box">
+          <h4><img src = "columbia-logo.png">PHARREL WILLIAMS</h4>
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
 
           <!-- Level 2 'HAPPY' Header -->
