--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       </div>
 
       <div id="back" class="album">
-        <h3></h3>
+        <h3>| &nbsp;&nbsp; FROM DESPICABLE ME 2 &nbsp;&nbsp; |</h3>
+        <h1></h1>
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
 
         <!-- Level 1 'HAPPY' Header -->
