--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       <div id="back" class="album">
         <h3>| &nbsp;&nbsp; FROM DESPICABLE ME 2 &nbsp;&nbsp; |</h3>
         <h1>HAPPY</h1>
-        <h3></h3>
+        <h3>WRITTEN BY PHARRELL WILLIAMS</h3>
+        <p></p>
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
 
         <!-- Level 1 'HAPPY' Header -->
