--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
         <h3>| &nbsp;&nbsp; FROM DESPICABLE ME 2 &nbsp;&nbsp; |</h3>
         <h1>HAPPY</h1>
         <h3>WRITTEN BY PHARRELL WILLIAMS</h3>
-        <p></p>
+        <p>PUBLISHED BY EMI APRIL MUSIC, INC. OBO ITSELF AND MORE WATERFROM NAZARETH (ASCAP) / UNIVERSAL PICTURES MUSIC (ASCAP) | BACKGROUND VOCALS PERFORMED BY RHEA DUMMETT, TREVON HENDERSON, ASHLEY L. LEE, SHAMIKA HIGHTOWER, JASMINE MURRAY AND TERRENCE ROLLE | PRODUCED BY PHARRELL WILLIAMS | RECORDED BY MIKE LARSON FOR I AM OTHER ENTERTAINMENT AT CIRCLE HOUSE STUDIOS, MIAMI, FL | ASSISTED BY MATTHEW DESRAMEAUX | DIGITAL EDITING AND ARRANGEMENT BY ANDREW COLEMAN AND MIKE LARSON FOR I AM OTHER ENTERTAINMENT | MIXED BY LESLIE BRATHWAITE AT MUSIC BOX STUDIOS, ATLANTA, GA.</p>
+        <span>PHARRELLWILLIAMS.COM</span>
+        <img src = "columbia-logo.png">
+        <span>COLUMBIARECORDS.COM</span>
 
 
         <!-- pararaph text 'PUBLISHED BY...' -->
@@ -31,7 +34,7 @@
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
         <br>
-
+        <img src = "sony-logo.png">
         <!-- image [sony-logo.png] -->
 
       </div>
